# alpaka

./: .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  CMakePresets.json  CMakePresets.json.license  Messages.sh  README.md  alpaka.kdev4  org.kde.alpaka.desktop  org.kde.alpaka.metainfo.xml  org.kde.kandalf.desktop  org.kde.kandalf.metainfo.xml  org.kde.kognos.desktop  org.kde.kognos.metainfo.xml
.kdev4/: alpaka.kdev4
icons/: sc-apps-alpaka.svg.license
po/ar/: alpaka.po
po/ast/: alpaka.po
po/ca/: alpaka.po
po/ca@valencia/: alpaka.po
po/cs/: alpaka.po
po/de/: alpaka.po
po/en_GB/: alpaka.po
po/eo/: alpaka.po
po/es/: alpaka.po
po/eu/: alpaka.po
po/fi/: alpaka.po
po/fr/: alpaka.po
po/ga/: alpaka.po
po/gl/: alpaka.po
po/he/: alpaka.po
po/hi/: alpaka.po
po/hu/: alpaka.po
po/ia/: alpaka.po
po/is/: alpaka.po
po/it/: alpaka.po
po/ja/: alpaka.po
po/ka/: alpaka.po
po/ko/: alpaka.po
po/lt/: alpaka.po
po/lv/: alpaka.po
po/nl/: alpaka.po
po/pl/: alpaka.po
po/pt_BR/: alpaka.po
po/sa/: alpaka.po
po/sk/: alpaka.po
po/sl/: alpaka.po
po/sv/: alpaka.po
po/tr/: alpaka.po
po/ug/: alpaka.po
po/uk/: alpaka.po
po/zh_CN/: alpaka.po
po/zh_TW/: alpaka.po
src/: CMakeLists.txt  ChatModel.cpp  ChatModel.h  KLLMContext.cpp  KLLMContext.h  KLLMInterface.cpp  KLLMInterface.h  KLLMReply.cpp  KLLMReply.h  KLLMRequest.cpp  KLLMRequest.h  Messages.sh  main.cpp
src/apps/: CMakeLists.txt  ChatModel.cpp  ChatModel.h  config-alpaka.h.in  config-kognos.h.in  controller.cpp  controller.h  kandalf.kcfg  kandalf.kcfgc  kognos.kcfg  kognos.kcfgc  main.cpp  resources.qrc  resources.qrc.license  systemtray.cpp  systemtray.h  windowcontroller.cpp  windowcontroller.h
src/apps/contents/ui/: GeneralSettingsPage.qml  LLMSettingsPage.qml  OllamaSettingsPage.qml  SettingsPage.qml  main.qml
src/apps/qml/: ChatView.qml  ConfigurationView.qml  GeneralSettingsPage.qml  LLMSettingsPage.qml  Main.qml  MessageDelegate.qml  OllamaSettingsPage.qml  SettingsPage.qml  TypingIndicator.qml  main.qml
src/contents/ui/: main.qml
src/core/: CMakeLists.txt  KLLMConstants.cpp  KLLMConstants.h  KLLMContext.cpp  KLLMContext.h  KLLMCoreConfig.cmake.in  KLLMInterface.cpp  KLLMInterface.h  KLLMReply.cpp  KLLMReply.h  KLLMRequest.cpp  KLLMRequest.h  kllmcoresettings.kcfg  kllmcoresettings.kcfgc
src/core/autotests/: CMakeLists.txt  kllmconstantstest.cpp  kllmconstantstest.h
src/kllm/: CMakeLists.txt  KLLMContext.cpp  KLLMContext.h  KLLMCoreConfigVersion.cmake  KLLMCoreConfigVersion.cmake.in  KLLMInterface.cpp  KLLMInterface.h  KLLMReply.cpp  KLLMReply.h  KLLMRequest.cpp  KLLMRequest.h
src/kllmcore/: CMakeLists.txt  KLLMContext.cpp  KLLMContext.h  KLLMInterface.cpp  KLLMInterface.h  KLLMReply.cpp  KLLMReply.h  KLLMRequest.cpp  KLLMRequest.h
src/kllmwidgets/: CMakeLists.txt
src/widgets/: CMakeLists.txt  KLLMActionMenu.cpp  KLLMActionMenu.h  KLLMConfigureDialog.cpp  KLLMConfigureDialog.h  KLLMConfigureWidget.cpp  KLLMConfigureWidget.h  KLLMModelComboBox.cpp  KLLMModelComboBox.h  KLLMResultWidget.cpp  KLLMResultWidget.h  KLLMWidgetsConfig.cmake.in
src/widgets/autotests/: CMakeLists.txt  kllmconfiguredialogtest.cpp  kllmconfiguredialogtest.h  kllmmodelcomboboxtest.cpp  kllmmodelcomboboxtest.h  kllmresultwidgettest.cpp  kllmresultwidgettest.h
